--- a/portfolio.html
+++ b/portfolio.html
@@ -29,46 +29,34 @@
         <nav class="navigation">
           <ul class="navigation-header list">
             <li class="navigation-item">
-              <a
-                href="./index.html"
-                class="navigation-header-link link-decoration current"
+              <a href="./index.html" class="navigation-header-link link-decoration current"
                 >Студія</a
               >
             </li>
             <li class="navigation-item">
-              <a
-                href="./portfolio.html"
-                class="navigation-header-link link-decoration"
+              <a href="./portfolio.html" class="navigation-header-link link-decoration"
                 >Портфоліо</a
               >
             </li>
             <li class="navigation-item">
-              <a
-                href="./index.html"
-                class="navigation-header-link link-decoration"
-                >Контакти</a
-              >
+              <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
             </li>
           </ul>
           <ul class="contact list">
             <li class="navigation-item">
-              <a
-                class="contact-mail link-decoration"
-                href="mailto:info@devstudio.com"
+              <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="navigation-item">
-              <a class="contact-tel link-decoration" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <section>
+      <section class="main-section section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="button-list list">
@@ -81,56 +69,74 @@
           <ul class="images list">
             <li class="images-item">
               <img width="370" alt="веб-сайт" src="./images/img8.jpg" />
-              <h2 class="image-name">Технохряк</h2>
-              <p class="image-name-discription">Вебсайт</p>
+              <div class="image-border">
+                <h2 class="image-name">Технохряк</h2>
+                <p class="image-name-discription">Вебсайт</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="дизайн" src="./images/img9.jpg" />
-              <h2 class="image-name">Постер New Orlean vs Golden Star</h2>
-              <p class="image-name-discription">Дизайн</p>
+              <div class="image-border">
+                <h2 class="image-name">Постер New Orlean vs Golden Star</h2>
+                <p class="image-name-discription">Дизайн</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="додаток" src="./images/img10.jpg" />
-              <h2 class="image-name">Ресторан Seafood</h2>
-              <p class="image-name-discription">Додаток</p>
+              <div class="image-border">
+                <h2 class="image-name">Ресторан Seafood</h2>
+                <p class="image-name-discription">Додаток</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="маркетинг" src="./images/img11.jpg" />
-              <h2 class="image-name">Проєкт Prime</h2>
-              <p class="image-name-discription">Маркетинг</p>
+              <div class="image-border">
+                <h2 class="image-name">Проєкт Prime</h2>
+                <p class="image-name-discription">Маркетинг</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="фото додаток" src="./images/img12.jpg" />
-              <h2 class="image-name">Проєкт Boxes</h2>
-              <p class="image-name-discription">Додаток</p>
+              <div class="image-border">
+                <h2 class="image-name">Проєкт Boxes</h2>
+                <p class="image-name-discription">Додаток</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="фото веб-сайт" src="./images/img13.jpg" />
-              <h2 class="image-name">Inspiration has no Borders</h2>
-              <p class="image-name-discription">Веб-сайт</p>
+              <div class="image-border">
+                <h2 class="image-name">Inspiration has no Borders</h2>
+                <p class="image-name-discription">Веб-сайт</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="фото дизайн" src="./images/img14.jpg" />
-              <h2 class="image-name">Видання Limited Edition</h2>
-              <p class="image-name-discription">Дизайн</p>
+              <div class="image-border">
+                <h2 class="image-name">Видання Limited Edition</h2>
+                <p class="image-name-discription">Дизайн</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="фото маркетинг" src="images/img15.jpg" />
-              <h2 class="image-name">Проєкт LAB</h2>
-              <p class="image-name-discription">Маркетинг</p>
+              <div class="image-border">
+                <h2 class="image-name">Проєкт LAB</h2>
+                <p class="image-name-discription">Маркетинг</p>
+              </div>
             </li>
 
             <li class="images-item">
               <img width="370" alt="додаток сайт" src="images/img16.jpg" />
-              <h2 class="image-name">Growing Business</h2>
-              <p class="image-name-discription">Додаток</p>
+              <div class="image-border">
+                <h2 class="image-name">Growing Business</h2>
+                <p class="image-name-discription">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -143,7 +149,7 @@
         >
         <address>
           <ul class="contact-information list">
-            <li>
+            <li class="address-link">
               <a
                 class="google-map link-decoration"
                 href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
@@ -153,14 +159,12 @@
                 м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
-              <a
-                class="contact-email link-decoration"
-                href="mailto:info@devstudio.com"
+            <li class="address-link">
+              <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-link">
               <a class="contact-phone link-decoration" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
