--- a/index.html
+++ b/index.html
@@ -29,68 +29,54 @@
         <nav class="navigation">
           <ul class="navigation-header list">
             <li class="navigation-item">
-              <a
-                href="./index.html"
-                class="navigation-header-link link-decoration current"
+              <a href="./index.html" class="navigation-header-link link-decoration current"
                 >Студія</a
               >
             </li>
             <li class="navigation-item">
-              <a
-                href="./portfolio.html"
-                class="navigation-header-link link-decoration"
+              <a href="./portfolio.html" class="navigation-header-link link-decoration"
                 >Портфоліо</a
               >
             </li>
             <li class="navigation-item">
-              <a
-                href="./index.html"
-                class="navigation-header-link link-decoration"
-                >Контакти</a
-              >
+              <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
             </li>
           </ul>
           <ul class="contact list">
-            <li class="navigation-list">
-              <a
-                class="contact-mail link-decoration"
-                href="mailto:info@devstudio.com"
+            <li class="navigation-item">
+              <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="navigation-list">
-              <a class="contact-tel link-decoration" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="navigation-item">
+              <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <section class="title-slogan">
+      <section class="title-slogan section">
         <div class="container">
           <h1 class="slogan-name">Ефективні рішення для вашого бізнесу</h1>
           <button class="button-order" type="button">Замовити послугу</button>
         </div>
       </section>
 
-      <section class="soft-skills">
+      <section class="soft-skills section">
         <div class="container">
           <h2 class="visually-hidden">Портфоліо</h2>
           <ul class="soft-skills-list list">
             <li class="item">
               <h3 class="soft-skills-item">Увага до деталей</h3>
               <p class="soft-skills-discription">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="item">
               <h3 class="soft-skills-item">Пунктуальність</h3>
               <p class="soft-skills-discription">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="item">
@@ -102,74 +88,49 @@
             <li class="item">
               <h3 class="soft-skills-item">Сучасні Технології</h3>
               <p class="soft-skills-discription">
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
         </div>
       </section>
-      <section class="image-job">
+      <section class="image-job section">
         <div class="container">
           <h2 class="image-job-title">Чим ми займаємося</h2>
           <ul class="image-list list">
-            <li>
+            <li class="image-job">
               <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
             </li>
-            <li>
-              <img
-                width="370"
-                alt="Людина вибирає інтерфейс"
-                src="./images/imgb.jpg"
-              />
+            <li class="image-job">
+              <img width="370" alt="Людина вибирає інтерфейс" src="./images/imgb.jpg" />
             </li>
-            <li>
-              <img
-                width="370"
-                alt="Палітра на екрані девайсу"
-                src="./images/imgc.jpg"
-              />
+            <li class="image-job">
+              <img width="370" alt="Палітра на екрані девайсу" src="./images/imgc.jpg" />
             </li>
           </ul>
         </div>
       </section>
-      <section class="image-background">
+      <section class="image-background section">
         <div class="container">
           <h2 class="image-team">Наша команда</h2>
           <ul class="image-team-list list">
-            <li>
-              <img
-                width="270"
-                alt="фото Ігор Дем'яненко"
-                src="./images/imgd.jpg"
-              />
+            <li class="image-staff">
+              <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
               <h3 class="image-team-name">Ігор Дем'яненко</h3>
               <p class="image-team-position">Product Designer</p>
             </li>
-            <li>
-              <img
-                width="270"
-                alt="фото Ольга Рєпіна"
-                src="./images/imge.jpg"
-              />
+            <li class="image-staff">
+              <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
               <h3 class="image-team-name">Ольга Рєпіна</h3>
               <p class="image-team-position">Frontend Developer</p>
             </li>
-            <li>
-              <img
-                width="270"
-                alt="фото Микола Тарасов"
-                src="images/imgf.jpg"
-              />
+            <li class="image-staff">
+              <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
               <h3 class="image-team-name">Микола Тарасов</h3>
               <p class="image-team-position">Marketing</p>
             </li>
             <li>
-              <img
-                width="270"
-                alt="фото Михайло Єрмаков"
-                src="images/imgg.jpg"
-              />
+              <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
               <h3 class="image-team-name">Михайло Єрмаков</h3>
               <p class="image-team-position">UI Designer</p>
             </li>
@@ -184,7 +145,7 @@
         >
         <address>
           <ul class="contact-information list">
-            <li>
+            <li class="address-link">
               <a
                 class="google-map link-decoration"
                 href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
@@ -194,14 +155,12 @@
                 м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
-              <a
-                class="contact-email link-decoration"
-                href="mailto:info@devstudio.com"
+            <li class="address-link">
+              <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-link">
               <a class="contact-phone link-decoration" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
