footer/btn hm-3

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,10 @@
         <nav class="navigation">
           <ul class="navigation-header list">
             <li class="navigation-item">
-              <a href="./index.html" class="navigation-header-link link-decoration current"
-                >Студія</a
-              >
+              <a href="./index.html" class="navigation-header-link link-decoration">Студія</a>
             </li>
             <li class="navigation-item">
-              <a href="./portfolio.html" class="navigation-header-link link-decoration"
+              <a href="./portfolio.html" class="navigation-header-link link-decoration current"
                 >Портфоліо</a
               >
             </li>
