--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Document</title>
   </head>
   <body>
+<section>
     <header class="title">
       <div class="container main-link">
         <a class="Studio-header link-decoration" href="index.html"
@@ -54,15 +55,15 @@
           </ul>
         </nav>
       </div>
+      </section>
     </header>
     <main>
-      <section class="title-slogan section">
+      <section class="title-slogan">
         <div class="container">
           <h1 class="slogan-name">Ефективні рішення для вашого бізнесу</h1>
           <button class="button-order" type="button">Замовити послугу</button>
         </div>
       </section>
-
       <section class="soft-skills section">
         <div class="container">
           <h2 class="visually-hidden">Портфоліо</h2>
@@ -93,6 +94,8 @@
             </li>
           </ul>
         </div>
+        </section>
+        <section class="whatwedo section adi"
         <div class="container">
           <h2 class="image-job-title">Чим ми займаємося</h2>
           <ul class="image-list list">
@@ -114,23 +117,31 @@
           <ul class="image-team-list list">
             <li class="image-staff">
               <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
+              <div class="staff">
               <h3 class="image-team-name">Ігор Дем'яненко</h3>
               <p class="image-team-position">Product Designer</p>
+              </div>
             </li>
             <li class="image-staff">
               <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
+              <div class="staff">
               <h3 class="image-team-name">Ольга Рєпіна</h3>
               <p class="image-team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="image-staff">
               <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
+              <div class="staff">
               <h3 class="image-team-name">Микола Тарасов</h3>
               <p class="image-team-position">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="image-staff">
               <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
-              <h3 class="image-team-name">Михайло Єрмаков</h3>
+              <div class="staff">
+              <h3 class="image-team-name">Михайло Єрмаков </h3>
               <p class="image-team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -141,7 +152,7 @@
         <a class="Studio link-decoration" href="index.html"
           ><span class="Web link-decoration">Web</span>Studio</a
         >
-        <address>
+        <address class="address">
           <ul class="contact-information list">
             <li class="address-link">
               <a
