--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,19 @@
     <title>Портфоліо</title>
   </head>
   <body>
+    <section>
     <header class="title">
       <div class="container main-link">
-        <a class="Studio-header link-decoration" href="index.html"
-          ><span class="Web-header">Web</span>Studio</a
-        >
+        <a class="Studio-header link-decoration" href="index.html"></a>  
+          <a href="./portfolio.html" class="navigation-header-link link-decoration current"
+                >Портфоліо</a>
+          <span class="Web-header">Web</span>Studio</a>
         <nav class="navigation">
           <ul class="navigation-header list">
             <li class="navigation-item">
               <a href="./index.html" class="navigation-header-link link-decoration">Студія</a>
             </li>
-            <li class="navigation-item">
-              <a href="./portfolio.html" class="navigation-header-link link-decoration current"
-                >Портфоліо</a
-              >
+            <li class="navigation-item">  
             </li>
             <li class="navigation-item">
               <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
@@ -52,6 +51,7 @@
           </ul>
         </nav>
       </div>
+      </section>
     </header>
     <main>
       <section class="main-section section">
@@ -134,10 +134,9 @@
               <div class="image-border">
                 <h2 class="image-name">Growing Business</h2>
                 <p class="image-name-discription">Додаток</p>
-              </div>
+                </div>
             </li>
           </ul>
-        </div>
       </section>
     </main>
     <footer class="site-footer">
