--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
               <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
             </li>
           </ul>
-          <ul class="contact list">
+         
+        </nav>
+         <ul class="contact list">
             <li class="navigation-item">
               <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -53,7 +55,6 @@
               <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
       </div>
       </section>
     </header>
@@ -95,7 +96,7 @@
           </ul>
         </div>
         </section>
-        <section class="whatwedo section adi"
+        <section class="whatwedo section additional">
         <div class="container">
           <h2 class="image-job-title">Чим ми займаємося</h2>
           <ul class="image-list list">
