--- a/portfolio.html
+++ b/portfolio.html
@@ -22,24 +22,28 @@
   </head>
   <body>
     <section>
-    <header class="title">
+   <header class="title">
       <div class="container main-link">
-        <a class="Studio-header link-decoration" href="index.html"></a>  
-          <a href="./portfolio.html" class="navigation-header-link link-decoration current"
-                >Портфоліо</a>
-          <span class="Web-header">Web</span>Studio</a>
+        <a class="Studio-header link-decoration" href="index.html"
+          ><span class="Web-header">Web</span>Studio</a
+        >
+        
         <nav class="navigation">
           <ul class="navigation-header list">
             <li class="navigation-item">
               <a href="./index.html" class="navigation-header-link link-decoration">Студія</a>
             </li>
-            <li class="navigation-item">  
+            <li class="navigation-item"> 
+ <a href="./portfolio.html" class="navigation-header-link link-decoration current"
+                >Портфоліо</a>
             </li>
             <li class="navigation-item">
               <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
             </li>
           </ul>
-          <ul class="contact list">
+          
+        </nav>
+        <ul class="contact list">
             <li class="navigation-item">
               <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -49,7 +53,6 @@
               <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
       </div>
       </section>
     </header>
