--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
         <a class="Studio link-decoration" href="index.html"
           ><span class="Web link-decoration">Web</span>Studio</a
         >
-        <address>
+        <address class="address">
           <ul class="contact-information list">
             <li class="address-link">
               <a
